
=== ppracer 0.5 alpha2 ===

2005-10-31  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	some scary cleanups

	* src/ppogl/ui/frame.*
	removed scary frame widget
	
	* src/paused.*
	replaced scary frame widget with dark scary background
	
	* src/*
	fixed scary build errors
	fixed scary build problems w/o SDL_mixer
	fixed scary build problems w/ gcc 2.95

2005-10-30  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/audio/audiomgr.cpp
	fix memleak in destructor
	
	* src/track_marks.*
	fixed uninitialized values
	fixed possible gpf
	cleanups
	
	* src/ppogl/base/errors.cpp
	don't use rdbuf to set logfile
	
	* src/ppogl/base/signal.*
	added sinal.cpp
	moved some code to signal.cpp

2005-10-28  Volker Stroebel <volker@planetpenguin.de>
	* src/quadtree.* src/gameconfig.* data/config.nut.in
	removed settings for terrain blending
	
	* src/quadtree.cpp course_render.cpp
	cleanups

2005-10-27  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/sg/vnc.* src/course_load.* src/quadtree.*
	added class VNCArray
	changed code to use the new class
	
	* src/ppogl/base/vec* src/ppogl/base/color.*
	removed unused code
	
	* src/tux_shadow.*
	cleanups
	
	* src/ppogl/base/glwrappers.h
	use vector/array ops where possible
	
	* src/phys_sim.cpp
	removed unused code
	cleanups

2005-10-25  Volker Stroebel <volker@planetpenguin.de>
	* src/credits.cpp
	cleanups

2005-10-24  Volker Stroebel <volker@planetpenguin.de>
	* src/hier_utils.* src/hier.cpp data/models/*/model.nut
	removed unused eye values from struct SceneNode

2005-10-22  Volker Stroebel <volker@planetpenguin.de>
	* (*)
	some cleanups
	
	* src/ftgl/*
	removed unused code

2005-10-21  Volker Stroebel <volker@planetpenguin.de>
	* src/course_load.cpp
	reset item states if course is not reloaded

	* data/config.nut.in * src/trackmarks.*
	added max_track_marks
	
	* src/track_marks.* src/course_mirror.cpp
	mirror track marks
	
	* src/track_marks.cpp src/racing.cpp
	use chached config values
	
	* src/nmrcl.cpp